--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -42,11 +42,16 @@
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <img src="/static/store/menu_icon.gif" width="20px">
   </a>
+  
   <div id="search">
-    <button id="search_holder">
-    <img src="/static/store/search_icon.gif" id="search_icon"></button>
-    <input type="text" placeholder="" class="right">
+    <form method='GET' action=''>
+      <input type="text" name='q' placeholder="">
+      <button id='search_holder'>
+        <img src="/static/store/search_icon.gif" id="search_icon">        
+      </button>
+    </form>
   </div>
+
   
 </div>
   <div class="nav2">
