--- a/store/templates/store/post_detail.html
+++ b/store/templates/store/post_detail.html
@@ -44,6 +44,9 @@
     <p class="article-content">{{ object.description|linebreaks }}</p>
     {% if object.author != user %}
     {% if object in sub %}
+    <div>
+          <a class="btn btn-default" href="{% url 'lesson_uploaded' object.id %}">Currently uploaded material</a>
+        </div>
     <a style="width: 170px" class="brk-btn" href="{% url 'change_sub' object.id 'remove' %}">Unsubscribe</a>
     {% else %}
     <a style="width: 170px" class="brk-btn" href="{% url 'change_sub' object.id 'add' %}">Subscribe</a>
