--- a/store/templates/store/uploaded_lesson.html
+++ b/store/templates/store/uploaded_lesson.html
@@ -11,7 +11,7 @@
 	      </tr>
 	    </thead>
 	    <tbody>
-	      {% for l in lesson %}
+	      {% for l in Lesson %}
 	      <tr>
           	<td>
 		      	{% if l.file %}
@@ -27,10 +27,8 @@
 	           	<h6>Not available</h6>
 	           	{% endif %}	   
 	        </td>
-	        <td><form method="post" action="{% url 'delete_lesson' l.post_id %}">
-	        	{% csrf_token %}
-	        	<button type="submit" class="btn-danger btn-sm">Delete</button>
-	        </form></td>
+	        <td> <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'lesson_delete' l.id %}">Delete</a>
+	        </td>
 	      </tr>
 	      {% endfor %}
 	    </tbody>
