--- a/store/templates/store/sub_home.html
+++ b/store/templates/store/sub_home.html
@@ -85,6 +85,9 @@
       <div style="padding-top: 20px;" id="main" >
       <section class="text-center mb-4">
         <div class="row">    
+        {% if subs == null %}
+        <h1>You have no Subscriptions</h1>
+        {% endif %}
         {% for sub in subs %}      
         
           <div class="col-lg-3 col-md-6 mb-4">            
