--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 
 <html>
@@ -88,7 +87,7 @@
       </div>
     {% endfor %}
   {% endif %}
-  {% block content %}{% endblock %}
+  {% block content %}{% load extra_filter %}{% endblock %}
 </div>
 
 </body>
