--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -87,7 +87,7 @@
       </div>
     {% endfor %}
   {% endif %}
-  {% block content %}{% load extra_filter %}{% endblock %}
+  {% block content %}{% endblock %}
 </div>
 
 </body>
