--- a/store/templates/store/mycontent.html
+++ b/store/templates/store/mycontent.html
@@ -1,7 +1,6 @@
-        
+ 
   {% load extra_filter %}
-        {% for post in post %}      
-        
+ {% for post in mine %} 
           <div class="col-lg-3 col-md-6 mb-4">            
             <div id="course_card">            
               <div class="view overlay">
@@ -42,6 +41,5 @@
                 </small>
               </div>            
             </div>            
-          </div>          
-        
+          </div>   
         {% endfor %}
