--- a/store/templates/store/home_ext.html
+++ b/store/templates/store/home_ext.html
@@ -54,33 +54,29 @@
       </div>
 
       <div class="panel">
-        <span class="shape">
           <!-- <a href="{% url 'store-home'%}"> -->
-            <a onclick="hide(); return true;">
+            <a id="random_link" onclick="show('random'); return true;">
             <img src="/static/store/random.gif" alt="">
             Random Finds
           </a>
-          </span>
-          <span class="shape">
           {% if user.is_authenticated %}
-          <a  href="{% url 'store-sub_home' %}">
+          <!-- <a  href="{% url 'store-sub_home' %}"> -->
+          <a id="subscription_link" onclick="show('subscription'); return true;">
           {% else %}
-          <a  href="{% url 'login' %}">
+          <a  id="subscription_link" href="{% url 'login' %}">
           {% endif %}
             <img src="/static/store/Subscription.gif" alt="">
             My Subscription
           </a>
-          </span>
           
-          <span class="shape">
           {% if user.is_authenticated %}
-          <a  href="{% url 'user-posts' user.username %}">
+          <!-- <a  href="{% url 'user-posts' user.username %}"> -->
+          <a id="content_link" onclick="show('content'); return true;">
           {% else %}
-          <a  href="{% url 'login' %}">
+          <a  id="content_link" href="{% url 'login' %}">
           {% endif %}
             <img src="/static/store/content.gif" alt="">
             My Content
           </a>
-          </span>
       </div>
       <p style="padding: 20px;"></p>
