--- a/store/templates/store/sub_home.html
+++ b/store/templates/store/sub_home.html
@@ -6,10 +6,10 @@
       <div class="row" id="random">    
         {% include "store/home.html" %}
       </div>
-      <div class="row" id="subscription">    
+      <div class="row" id="subscription" style="display: none;">    
         {% include "store/subscription.html" %}
       </div>
-      <div class="row" id="content">    
+      <div class="row" id="content" style="display: none;">    
         {% include "store/mycontent.html" %}
       </div>
     </section>
