--- a/store/templates/store/home_ext.html
+++ b/store/templates/store/home_ext.html
@@ -55,28 +55,27 @@
 
       <div class="panel">
           <!-- <a href="{% url 'store-home'%}"> -->
-            <a id="random_link" onclick="show('random'); return true;">
+            <button id="random_link" onclick="show('random'); return true;">
             <img src="/static/store/random.gif" alt="">
             Random Finds
-          </a>
+            </button>
           {% if user.is_authenticated %}
-          <!-- <a  href="{% url 'store-sub_home' %}"> -->
-          <a id="subscription_link" onclick="show('subscription'); return true;">
+          <button id="subscription_link" onclick="show('subscription'); return true;">
           {% else %}
-          <a  id="subscription_link" href="{% url 'login' %}">
+          <button  id="subscription_link" href="{% url 'login' %}">
           {% endif %}
             <img src="/static/store/Subscription.gif" alt="">
             My Subscription
-          </a>
+          </button>
           
           {% if user.is_authenticated %}
           <!-- <a  href="{% url 'user-posts' user.username %}"> -->
-          <a id="content_link" onclick="show('content'); return true;">
+          <button id="content_link" onclick="show('content'); return true;">
           {% else %}
-          <a  id="content_link" href="{% url 'login' %}">
+          <button  id="content_link" href="{% url 'login' %}">
           {% endif %}
             <img src="/static/store/content.gif" alt="">
             My Content
-          </a>
+          </button>
       </div>
       <p style="padding: 20px;"></p>
