--- a/store/templates/store/home_ext.html
+++ b/store/templates/store/home_ext.html
@@ -1,4 +1,4 @@
-
+<div style="padding-top: 85px;"></div>
 <div id="useless">
           <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -55,7 +55,7 @@
 
       <div class="panel">
           <!-- <a href="{% url 'store-home'%}"> -->
-            <button id="random_link" onclick="show('random'); return true;">
+            <button class="Active" id="random_link" onclick="show('random'); return true;">
             <img src="/static/store/random.gif" alt="">
             Random Finds
             </button>
