--- a/store/templates/store/post_detail.html
+++ b/store/templates/store/post_detail.html
@@ -5,10 +5,11 @@
 <article class="media content-section">
   <span id="post__">  
   <img class="post_detail_image"  src="{{ post.image.url }}">
-  <div class="star-ratings-css" style="font-size: 48px; width:220px;">
+  <div class="star-ratings-css" style="font-size: 48px; width:200px;">
   <div class="star-ratings-css-top" style="width: {{ object.feedback|calc_rating }}%"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
   <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
 </div>
+ <h6>rating: {{ object.feedback|calc_rating|multiply_by:0.05 }} from {{ object.feedback|get_m|length }} users</h6>
   <!-- <fieldset class="rating">
     <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
     <input type="radio" id="star4half" name="rating" value="4 and a half" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
