--- a/store/templates/store/sub_home.html
+++ b/store/templates/store/sub_home.html
@@ -8,12 +8,18 @@
         {% include "store/card.html" %}
         {% endfor %}
       </div>
-      <div class="row" id="subscription" style="display: none;">    
+      <div class="row" id="subscription" style="display: none;">
+        {% if not subs %}
+        <h2>You have not subscribed to any course :/</h2>
+        {% endif %} 
         {% for post in subs %}
         {% include "store/card.html" %}
         {% endfor %}
       </div>
-      <div class="row" id="content" style="display: none;">    
+      <div class="row" id="content" style="display: none;"> 
+        {% if not mine %}
+        <h2>You have not published anything :/</h2>
+        {% endif %}   
         {% for post in mine %}
         {% include "store/card.html" %}
         {% endfor %}
