--- a/store/templates/store/user_posts.html
+++ b/store/templates/store/user_posts.html
@@ -14,44 +14,8 @@
         <h6>{{ post.0.author.profile.bio }}</h6>
         <section class="text-center mb-4"> 
         <div class="row">    
-        {% for post in post %}      
-        <div class="col-lg-3 col-md-6 mb-4">            
-            <div id="course_card">            
-              <div class="view overlay">
-                <img style="margin-left: -10px;" src="{{ post.image.url }}" alt="">
-              </div>                                    
-              <div>                
-                
-                <div>
-                  <strong>
-                    <a class="title" href="{% url 'post-detail' post.id %}" > <span>{{ post.title }}</span> 
-                      <span  style="background-color: rgb(253, 98, 98);" class="badge badge-pill danger-color">NEW
-                      </span> 
-                    </a>
-                  </strong>
-                </div>
-                <a href="{% url 'user-posts' post.author.username %}" class="author">
-                  {{ post.author }} 
-                </a>
-                <div class="rating">
-                    {% for j in post.rating|for_ %}
-                      <span class="fa fa-star checked"></span>
-                    {% endfor %}
-                    {% for j in 5|for_subtract:post.rating %}
-                    <span class="fa fa-star"></span>
-                    {% endfor %}
-                    </div>
-                <div>
-                  <strong style="text-align: right;" class="price">S${{ post.price }}
-                  </strong>
-                </div>
-                <small class="date">
-                   {{ post.date_posted|date:'d F y'}}
-                </small>
-              </div>            
-            </div>            
-          </div>          
-        
+        {% for post in post %}   
+        {% include "store/card.html" %}
         {% endfor %}
  </div>
       </section>
