--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -477,3 +477,24 @@ body {
   display: block;
   z-index: 0;
 }
+
+#fade_Screen{
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.623);
+  z-index: 99;
+}
+
+#create_comment_window {
+  position: fixed;
+  top: 25%;
+  left: 25%;
+  z-index: 100;
+  width: 50%;
+  border: solid 2px black;
+  background-color: white;
+  padding: 10px;
+}
