--- a/store/templates/store/post_detail.html
+++ b/store/templates/store/post_detail.html
@@ -32,6 +32,9 @@
       <p>
         <h6> ${{ object.price}} </h6>
       </p>
+      {% if object.author == user or object in sub %}
+    <button id="togglecomment" style="float: right;" onclick="toggle_comment(); return true;">Give a Review</button>
+  {% endif %}
       {% if object.author == user %}
         <div>
           <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' object.id %}">Update</a>
@@ -91,11 +94,16 @@
     </div>
     {% endfor %}
   </div>
+  
+  <div style="display:none;" id="create_comment_window">
   <form method="post" enctype="multipart/form-data">
 			{% csrf_token %}
 			{{ form | crispy }}
-			<button class="btn btn-secondary" type="submit" >submit</button>
-		</form>
+      <button style="float: right;" class="btn btn-secondary" onclick="toggle_comment(); return true;">cancel</button>
+      <button class="btn btn-secondary" type="submit" >submit</button>
+    </form>
+  </div>
+  <div style="display: none;" id="fade_Screen"></div>
 </article>
 </div>
 {% endblock content %}
